RESOLVED FIXED308958
[Regression]: Build broken after 308029@main
https://bugs.webkit.org/show_bug.cgi?id=308958
Summary [Regression]: Build broken after 308029@main
Sergio Villar Senin
Reported 2026-03-02 01:18:42 PST
It fails with this error /host/home/sergio/projects/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:165:30: error: temporary implicitly bound to local reference will be destroyed at the end of the full-expression [-Werror,-Wdangling] 165 | for (auto& transceiver : protect(m_peerConnection)->currentTransceivers()) { | ^~~~~~~~~~~~~~~~~~~~~~~~~ /host/home/sergio/projects/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:279:36: error: temporary implicitly bound to local reference will be destroyed at the end of the full-expression [-Werror,-Wdangling] 279 | for (const auto& transceiver : protect(m_peerConnection)->currentTransceivers()) { | ^~~~~~~~~~~~~~~~~~~~~~~~~ /host/home/sergio/projects/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:342:47: error: temporary implicitly bound to local reference will be destroyed at the end of the full-expression [-Werror,-Wdangling] 342 | for (const auto& currentTransceiver : protect(m_peerConnection)->currentTransceivers()) { | ^~~~~~~~~~~~~~~~~~~~~~~~~ /host/home/sergio/projects/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:426:30: error: temporary implicitly bound to local reference will be destroyed at the end of the full-expression [-Werror,-Wdangling] 426 | for (auto& transceiver : protect(m_peerConnection)->currentTransceivers()) { | ^~~~~~~~~~~~~~~~~~~~~~~~~ /host/home/sergio/projects/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:459:30: error: temporary implicitly bound to local reference will be destroyed at the end of the full-expression [-Werror,-Wdangling] 459 | for (auto& transceiver : protect(m_peerConnection)->currentTransceivers()) { |
Attachments
Sergio Villar Senin
Comment 1 2026-03-02 01:51:52 PST
EWS
Comment 2 2026-03-02 03:02:16 PST
Committed 308447@main (89644604f90c): <https://commits.webkit.org/308447@main> Reviewed commits have been landed. Closing PR #59699 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.