[Regression]: Build broken after 48bb3573d@main https://bugs.webkit.org/show_bug.cgi?id=308958

Reviewed by Philippe Normand and Chris Dumez.

Fixes clang build (with -Werror) by ref'ing the local attribute that is
going to be accessed later in loops.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:
(WebCore::GStreamerPeerConnectionBackend::dispatchSenderBitrateRequest):
(WebCore::GStreamerPeerConnectionBackend::addTrack):
(WebCore::GStreamerPeerConnectionBackend::existingTransceiver):
(WebCore::GStreamerPeerConnectionBackend::applyRotationForOutgoingVideoSources):

Canonical link: https://commits.webkit.org/308447@main